Fix watched films being too small in chrome
Not sure why Firefox/Safari can render five stars side-by-side
in 133px, but Chrome can't... This makes it consistently sized
with the "recent films" shortcode anyhow.

Thanks Shane for the bug report

--- a/cmd/serve/assets/stylesheet/films.css
+++ b/cmd/serve/assets/stylesheet/films.css
@@ -303,7 +303,7 @@ ol.watched-films {
 
     &.watched-films {
         display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(133px, 1fr));
+        grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
     }
 
     li {
